--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@
 }
 
 body {
+    padding: 0;
+    margin: 0;
+}
+
+body {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 400;
@@ -15,7 +20,7 @@ body {
 }
 
 h1 {
-    font-family: 'Shippori';
+    font-family: 'Shippori Mincho', serif;;
     font-style: normal;
     font-weight: 800;
     font-size: 64px;
@@ -53,12 +58,30 @@ button {
     text-transform: uppercase;
 }
 
-.hero-image {
-    background-color: var(--black);
+.center {
+
 }
 
-.hero-text {
+.hero-image {
+    background-image: 
+    linear-gradient(rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.6)),
+    url("images/hero.png");
+    background-position: left;
+    background-repeat: no-repeat;
+    background-color: var(--black);
+    background-size: 50%;
 
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+    height: 693px;
+    width: 100%;
+}
+.hero-text {
+    position: relative;
+    left: 50%;
+    width: 650px;
 }
 
 .hero-text h1 {
@@ -83,5 +106,21 @@ button {
 .hero-text button {
     color: var(--white);
     background-color: var(--red)
+}
+
+.info-section {
+    text-align: center;
+    margin: 45px 0px;
+    
+}
+.info-section > * {
+    text-align: center;
+    margin: 10px 0px;
+    
+}
+
+.info-section h4 {
+    max-height: 30px;
+    color: var(--red)
 }
 
