--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,33 @@
+* {
+    box-sizing: border-box;
+}
 :root {
     --red: #CC1129;
-    --yellow: ;
-    --brown: ;
+    --yellow: #ffefa0;
+    --brown: #8c6946;
     --white: white;
-    --black: black;
+    --black: #0e0904;
 }
 
-body {
+body, ::placeholder, input {
     padding: 0;
     margin: 0;
-}
 
-body {
-    font-family: 'Poppins';
+    font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
+}
+
+header, footer {
+    background-color: var(--black);
+}
+
+
+a {
+    color: var(--white);
+    text-decoration: none;
 }
 
 h1 {
@@ -28,7 +39,11 @@ h1 {
 }
 
 h2 {
-
+    font-family: 'Shippori Mincho', serif;;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 30px;
+    line-height: 33px;
 }
 
 h3 {
@@ -40,7 +55,7 @@ h3 {
 }
 
 h4 {
-    font-family: 'Shippori';
+    font-family: 'Shippori Mincho', serif;;
     font-style: normal;
     font-weight: 800;
     font-size: 20px;
@@ -50,73 +65,179 @@ h4 {
 }
 
 button {
-    font-family: 'Poppins';
+    font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 800;
     font-size: 16px;
     line-height: 24px;
     text-transform: uppercase;
+
+    border: none;
+
+    transition-duration: 0.3s;
 }
 
-.center {
+.header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
 
+    margin-left: auto;
+    margin-right: auto;
+
+    max-width: 70rem;
+
+    background: var(--black);
 }
 
-.hero-image {
+.header .logo {
+    margin: 0px 15px;
+    width: 150px;
+}
+
+.header .links {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    color: var(--white);
+}
+
+.header .links > :is(h3, button) {
+    margin: 40px 20px;
+}
+
+
+#book-now {
+    background-color: var(--red);
+    color: var(--white);
+
+    width: 150px;
+    height: 50px;
+
+    margin-right: 15px;
+}
+
+#book-now:hover {
+    color: var(--red);
+    background-color: var(--white);
+}
+
+.underline-animation {
+    display: inline-block;
+    position: relative;
+  }
+  
+.underline-animation:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    
+    background-color:var(--white);
+
+    transform: scaleX(0);
+    transform-origin: bottom left;
+    transition: transform 0.25s ease-out;
+}
+  
+.underline-animation:hover:after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+
+.gallery-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: var(--black);
+
+    min-height: 800px;
+}
+
+.gallery-section > * {
+    flex: 1;
+    max-width: 660px;
+}
+
+#hero {
     background-image: 
-    linear-gradient(rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.6)),
+    linear-gradient(to right,
+    rgba(0, 0, 0, 0) 40rem,
+    rgba(0, 0, 0, 0.6) 50rem),
     url("images/hero.png");
     background-position: left;
     background-repeat: no-repeat;
     background-color: var(--black);
-    background-size: 50%;
-
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-
-    height: 693px;
-    width: 100%;
+    background-size:contain;
 }
-.hero-text {
+
+.hero-spacing {
+    /* margin: auto 5% auto 50%;
+    width: auto; */
+    max-width: 50%;
+    min-width: 660px;
     position: relative;
-    left: 50%;
-    width: 650px;
+    transform: translateX(50%);
 }
 
-.hero-text h1 {
-    color: var(--white)
+.hero-text > * {
+    margin: 10px 0px;
+    color: var(--white);
 }
 
-.hero-text h2 {
-}
-
-.hero-text h3 {
-    color: var(--white)
-}
-
-.hero-text h4 {
-    color: var(--red)
-}
-
-.hero-text p {
-    color: var(--white)
+.hero-text > h4 {
+    color: var(--red);
 }
 
 .hero-text button {
     color: var(--white);
-    background-color: var(--red)
+    background-color: var(--red);
+    width: 200px;
+    height: 50px;
+}
+
+.hero-text button:hover {
+    color: var(--red);
+    background-color: var(--white);
+}
+
+/* #spotlight {
+    background-image: 
+    url("images/tempura.png");
+    background-position: right;
+    background-repeat: no-repeat;
+    background-color: var(--black);
+    background-size: auto;
+} */
+
+
+#spotlight-text{
+    /* max-width: 50%;
+    min-width: 660px;
+    position: relative; */
+    /* transform: translateX(-50%); */
 }
 
 .info-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     text-align: center;
-    margin: 45px 0px;
-    
+    margin: 30px 0px;
+    /* height: 30rem; */
 }
+
 .info-section > * {
     text-align: center;
     margin: 10px 0px;
-    
+    width: 60%;
 }
 
 .info-section h4 {
@@ -124,3 +245,228 @@ button {
     color: var(--red)
 }
 
+.tiles {
+    /* this is the important part. Make sure top margin = top padding + height of text */
+    margin: 25px 10px -7rem 10px;
+    display: flex;
+    justify-content: center;
+    gap: 5rem;
+}
+  
+.tile {
+    flex-basis: 25%;
+    background-color: var(--brown);
+    padding: 50px;
+    min-height: 200px;
+    max-width: 400px;
+}
+
+.tile h2 {
+    color:var(--white);
+    margin-top: 0;
+}
+
+.tile h3 {
+    color:var(--yellow);
+    margin-bottom: 5px;
+}
+
+.tile p {
+    color:var(--white);
+    margin: 0;
+}
+
+.tile .buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1.5rem;
+}
+
+.buttons > * {
+    width: 4rem;
+}
+
+#location {
+    background-color: var(--yellow);
+
+    width: 150px;
+    height: 50px;
+}
+
+#location:hover {
+    color: var(--white);
+    background-color: var(--black);
+}
+
+#location i {
+    margin-right: 5px;
+}
+
+.buttons #book-now {
+    background-color: var(--red);
+    color: var(--white);
+
+    width: 150px;
+    height: 50px;
+}
+
+#book-now:hover {
+    color: var(--red);
+    background-color: var(--white);
+}
+
+
+.signup-section {
+    padding: 40px 0px;
+    background-color: var(--brown);
+}
+
+.signup-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    text-align: center;
+
+    
+}
+
+.signup-section > *{
+    max-width: 600px;
+    margin: 10px 0px;
+    color: var(--white);
+}
+
+.gform_body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+
+    margin-top: 30px;
+}
+
+#input_email {
+    color:var(--white);
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid var(--yellow);
+    padding-bottom: 8px;
+    margin: 0px 0px 20px 0px;
+    min-width: 440px;
+}
+
+#input_email::placeholder {
+    color:#ffffffb3;
+}
+
+#input_email:focus{
+    outline: none;
+    border-bottom: 1px solid var(--black);
+    transition-duration: 0.3s;
+}
+
+#gform_submit {
+    color: var(--white);
+    background-color: var(--red);
+    width: 125px;
+    height: 50px;
+}
+
+#gform_submit:hover {
+    color: var(--red);
+    background-color: var(--white);
+}
+
+
+.footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+
+    margin: 0px 50px;
+    padding: 25px 0 10px 0;
+
+    background: var(--black);
+}
+
+.footer .links {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+
+    color: var(--white);
+    margin-bottom: 10px;
+}
+
+.footer ul {
+    padding-left: 0;
+    margin-top: 0;
+}
+
+.footer ul, .logo {
+    margin: 0 60px;
+}
+
+.footer .links > h3{
+    margin: 40px 0 40px 40px;
+}
+
+.footer h3 {
+    font-size: 22px;
+    margin: 0 0 5px 0;
+}
+
+.footer a {
+    font-size: 13px;
+}
+
+.footer a, li {
+    line-height: 19px;
+}
+
+.footer .underline-animation:after {
+    height: 1px;
+    margin-bottom: 0px;
+}
+
+.no-bullet {
+    list-style-type: none;
+    justify-content: space-between;
+}
+
+.no-bullet * {
+    list-style-type: none;
+    justify-content: space-between;
+    white-space: nowrap;
+}
+
+.socials {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer .logo {
+    margin-top: 8px;
+    width: 200px;
+}
+
+.footer button {
+    margin: 0;
+}
+
+.footer .icon {
+    font-size: 35px;
+    color:var(--yellow)
+}
+
+.footer .icon:hover {
+    color:var(--brown)
+}
+
+.icon:hover {
+    transition-duration: 0.3s;
+}
